# copass-harness

./: .gitignore  .mcp.json  CONTRIBUTING.md  README.md
.claude/: settings.local.json
.github/workflows/: conformance.yml  release-python.yml  release-typescript.yml
docs/: api-surface.md  architecture.md  encryption.md  getting-started.md
python/: README.md
python/copass-agent-router/: pyproject.toml
python/copass-anthropic-agents/: README.md  pyproject.toml
python/copass-anthropic-agents/src/copass_anthropic_agents/: __init__.py  base_agent.py  base_tool.py  events.py  invocation_context.py  managed_agent.py  registry.py  tool_registry.py  tool_resolver.py
python/copass-anthropic-agents/src/copass_anthropic_agents/backends/: __init__.py  base_backend.py  managed_agent_backend.py
python/copass-anthropic-agents/tests/: test_base_agent.py  test_invocation_context.py  test_managed_agent_backend.py  test_scope.py  test_tool_registry.py
python/copass-config/: pyproject.toml
python/copass-context-agents/: README.md  pyproject.toml
python/copass-context-agents/src/copass_context_agents/: __init__.py  ingest_tool.py  retrieval_tools.py  turn_recorder.py
python/copass-core/: pyproject.toml
python/copass-core-agents/: README.md  pyproject.toml
python/copass-core-agents/src/copass_core_agents/: __init__.py  base_agent.py  base_tool.py  events.py  invocation_context.py  registry.py  scope.py  tool_registry.py  tool_resolver.py
python/copass-core-agents/src/copass_core_agents/backends/: __init__.py  base_backend.py
python/copass-core-agents/tests/: test_base_agent.py  test_invocation_context.py  test_scope.py  test_tool_registry.py
python/copass-core/src/copass_core/: __init__.py  client.py  types.py
python/copass-core/src/copass_core/resources/: __init__.py  agents.py  integrations.py  retrieval.py  sandbox_connections.py  sources.py
python/copass-core/tests/: test_resources_chunk_b1.py  test_resources_phase1a.py
python/copass-google-agents/: README.md  pyproject.toml
python/copass-google-agents/src/copass_google_agents/: __init__.py  _proxy_tool.py  deploy.py  events.py  google_agent.py
python/copass-google-agents/src/copass_google_agents/backends/: __init__.py  google_agent_backend.py
python/copass-google-agents/tests/: test_deploy.py  test_events.py  test_google_agent_backend.py
python/copass-hermes-agents/: README.md  pyproject.toml
python/copass-hermes-agents/src/copass_hermes_agents/: __init__.py  hermes_agent.py
python/copass-hermes-agents/src/copass_hermes_agents/backends/: __init__.py  hermes_agent_backend.py
python/copass-hermes-agents/tests/: test_copass_hermes_agent.py  test_hermes_agent_backend.py
python/copass-langchain/: pyproject.toml
python/copass-langchain/src/copass_langchain/: agent.py  tools.py
python/copass-management/: README.md  pyproject.toml
python/copass-management/src/copass_management/: __init__.py  registrar.py  specs.py
python/copass-management/src/copass_management/_spec/v1/: list_agent_tools.json  list_api_keys.json  list_apps.json  list_connected_accounts.json  list_sandbox_connections.json  list_triggers.json
python/copass-management/src/copass_management/_spec/v1/examples/: get_agent.example.json  get_source.example.json  list_agents.example.json  list_sandbox_connections.example.json  list_sandboxes.example.json
python/copass-management/src/copass_management/adapters/: mcp.py
python/copass-management/src/copass_management/tools/: __init__.py  connect_linear.py  create_agent.py  create_trigger.py  get_agent.py  get_run_trace.py  get_source.py  grant_sandbox_connection.py  list_agent_tools.py  list_agents.py  list_api_keys.py  list_apps.py  list_connected_accounts.py  list_runs.py  list_sandbox_connections.py  list_sandboxes.py  list_sources.py  list_trigger_components.py  list_triggers.py  pause_trigger.py  provision_source.py  resume_trigger.py  revoke_sandbox_connection.py  revoke_user_mcp_source.py  start_integration_connect.py  test_user_mcp_source.py  update_agent_model_settings.py  update_source.py  update_trigger.py
python/copass-management/tests/: test_conformance.py  test_registrar.py
python/copass-pydantic-ai/: README.md  pyproject.toml
python/copass-pydantic-ai/src/copass_pydantic_ai/: __init__.py  _strings.py  client.py  tools.py  types.py
python/copass-pydantic-ai/tests/: test_tools.py
python/scripts/: bump-lockstep-version.sh
scripts/: conformance_check.sh  lint_redaction.py
spec/: context-placeholders.md  crypto-constants.md
spec/management/v1/: README.md  connect_linear.json  create_trigger.json  get_agent.json  get_run_trace.json  get_source.json  grant_sandbox_connection.json  list_agents.json  list_runs.json  list_sandboxes.json  list_sources.json  list_trigger_components.json  pause_trigger.json  provision_source.json  resume_trigger.json  revoke_sandbox_connection.json  revoke_user_mcp_source.json  start_integration_connect.json  test_user_mcp_source.json  update_agent_model_settings.json  update_source.json  update_trigger.json
spec/management/v1/examples/: connect_linear.example.json  create_trigger.example.json  get_run_trace.example.json  grant_sandbox_connection.example.json  list_agent_tools.example.json  list_api_keys.example.json  list_apps.example.json  list_connected_accounts.example.json  list_runs.example.json  list_sources.example.json  (+12 more)
typescript/: README.md  RELEASING.md  lerna.json  package-lock.json  package.json  pnpm-lock.yaml
typescript/src/: client.ts  index.ts
typescript/src/auth/: api-key.ts  bearer.ts  index.ts  supabase.ts
typescript/src/config/: index.ts
typescript/src/crypto/: encryption.ts  index.ts  session-token.ts
typescript/src/http/: http-client.ts  index.ts  retry.ts
typescript/src/resources/: api-keys.ts  base.ts  cosync.ts  entities.ts  extraction.ts  index.ts  matrix.ts  plans.ts  projects.ts  usage.ts  users.ts
typescript/src/types/: matrix.ts
typescript/src/util/: index.ts  language-map.ts  metadata.ts  pipeline-resolver.ts  transforms.ts
typescript/test/unit/: client.test.ts
(+12 files in other folders)
