[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copass-anthropic-agents"
version = "0.3.0"
description = "Copass agent primitives for the Anthropic Managed Agents API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Olane Inc." }]
requires-python = ">=3.10"
keywords = [
    "copass",
    "knowledge-graph",
    "anthropic",
    "claude",
    "agents",
    "managed-agents",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.93.0",
    "copass-core-agents>=0.1.0",
    "copass-context-agents>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/olane-labs/copass-harness"
Repository = "https://github.com/olane-labs/copass-harness.git"

[tool.hatch.build.targets.wheel]
packages = ["src/copass_anthropic_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["copass_anthropic_agents"]
