[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copass-config"
version = "0.1.0"
description = "Canonical tool descriptions, parameter descriptions, and system prompts shared across every Copass Python adapter"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Olane Inc." }]
requires-python = ">=3.10"
keywords = ["copass", "knowledge-graph", "config", "tool-descriptions", "system-prompts"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/olane-labs/copass"
Repository = "https://github.com/olane-labs/copass.git"

[tool.hatch.build.targets.wheel]
packages = ["src/copass_config"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["copass_config"]
