[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copass-context-agents"
version = "0.1.0"
description = "Copass context-engineering primitives (retrieval tools, ingest tool, Context Window turn recorder) for copass-core-agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Olane Inc." }]
requires-python = ">=3.10"
keywords = [
    "copass",
    "knowledge-graph",
    "agents",
    "context-window",
    "retrieval",
    "ingest",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "copass-core>=0.1.0",
    "copass-core-agents>=0.1.0",
    "copass-config>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/olane-labs/copass"
Repository = "https://github.com/olane-labs/copass.git"

[tool.hatch.build.targets.wheel]
packages = ["src/copass_context_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
