[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copass-core-agents"
version = "0.1.0"
description = "Provider-neutral agent primitives shared by every Copass agent SDK"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Olane Inc." }]
requires-python = ">=3.10"
keywords = [
    "copass",
    "knowledge-graph",
    "agents",
    "abc",
    "primitives",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/olane-labs/copass-harness"
Repository = "https://github.com/olane-labs/copass-harness.git"

[tool.hatch.build.targets.wheel]
packages = ["src/copass_core_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["copass_core_agents"]
