[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copass-core"
version = "0.3.0"
description = "Core client SDK for the Copass platform (Python mirror of @copass/core)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Olane Inc." }]
requires-python = ">=3.10"
keywords = ["copass", "knowledge-graph", "sdk", "client", "retrieval"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/olane-labs/copass"
Repository = "https://github.com/olane-labs/copass.git"

[tool.hatch.build.targets.wheel]
packages = ["src/copass_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["copass_core"]
