[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copass-management"
version = "0.1.0"
description = "Spec-driven management tool registrar for Copass agents (read-only, Phase 1)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Olane Inc." }]
requires-python = ">=3.10"
keywords = ["copass", "management", "agents", "mcp", "olane"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "copass-core>=0.3.0",
    "pydantic>=2.7",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/olane-labs/copass-harness"
Repository = "https://github.com/olane-labs/copass-harness.git"

[tool.copass]
min_spec_version = "v1"
max_spec_version = "v1"

[tool.hatch.build.targets.wheel]
packages = ["src/copass_management"]
artifacts = ["src/copass_management/_spec/**/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["copass_management"]
